[gd_scene load_steps=7 format=2]

[ext_resource path="res://Resources/Images/GUI/panelCajaFuerte.png" type="Texture" id=1]
[ext_resource path="res://Scripts/GUI/PanelCajaFuerte.gd" type="Script" id=2]
[ext_resource path="res://Resources/Fonts/TheSnowday.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 85
font_data = ExtResource( 3 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://Resources/Fonts/N8ghtmare.ttf"

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = SubResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayText" type="Label" parent="."]
anchor_left = 0.425
anchor_top = 0.17
anchor_right = 0.425
anchor_bottom = 0.17
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Numero3" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.556
anchor_top = 0.355
anchor_right = 0.556
anchor_bottom = 0.355
margin_right = 75.0
margin_bottom = 75.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Numero6" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.556
anchor_top = 0.49
anchor_right = 0.556
anchor_bottom = 0.59
margin_right = 75.0
margin_bottom = 15.0

[node name="Numero9" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.556
anchor_top = 0.625
anchor_right = 0.556
anchor_bottom = 0.625
margin_right = 75.0
margin_bottom = 75.0

[node name="Numero2" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.465
anchor_top = 0.355
anchor_right = 0.465
anchor_bottom = 0.355
margin_right = 75.0
margin_bottom = 75.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Numero5" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.465
anchor_top = 0.49
anchor_right = 0.465
anchor_bottom = 0.59
margin_right = 75.0
margin_bottom = 15.0

[node name="Numero8" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.465
anchor_top = 0.625
anchor_right = 0.465
anchor_bottom = 0.625
margin_right = 75.0
margin_bottom = 75.0

[node name="Numero0" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.464
anchor_top = 0.763
anchor_right = 0.465
anchor_bottom = 0.767
margin_right = 73.976
margin_bottom = 72.6

[node name="Enter" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.374
anchor_top = 0.763
anchor_right = 0.465
anchor_bottom = 0.767
margin_right = -18.184
margin_bottom = 72.6

[node name="Del" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.555
anchor_top = 0.763
anchor_right = 0.566
anchor_bottom = 0.767
margin_right = 63.736
margin_bottom = 72.6

[node name="Numero1" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.375
anchor_top = 0.355
anchor_right = 0.375
anchor_bottom = 0.355
margin_right = 75.0
margin_bottom = 75.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Numero4" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.375
anchor_top = 0.49
anchor_right = 0.375
anchor_bottom = 0.59
margin_right = 75.0
margin_bottom = 15.0

[node name="Numero7" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.375
anchor_top = 0.625
anchor_right = 0.375
anchor_bottom = 0.625
margin_right = 75.0
margin_bottom = 75.0

[node name="Close" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.718
anchor_top = 0.86
anchor_right = 0.718
anchor_bottom = 0.86
margin_right = 135.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="."]
anchor_left = 0.718
anchor_top = 0.85
anchor_right = 0.718
anchor_bottom = 0.85
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
text = "Close"

[connection signal="pressed" from="Numero3" to="." method="_on_Numero3_pressed"]
[connection signal="pressed" from="Numero6" to="." method="_on_Numero6_pressed"]
[connection signal="pressed" from="Numero9" to="." method="_on_Numero9_pressed"]
[connection signal="pressed" from="Numero2" to="." method="_on_Numero2_pressed"]
[connection signal="pressed" from="Numero5" to="." method="_on_Numero5_pressed"]
[connection signal="pressed" from="Numero8" to="." method="_on_Numero8_pressed"]
[connection signal="pressed" from="Numero0" to="." method="_on_Numero0_pressed"]
[connection signal="pressed" from="Enter" to="." method="_on_Enter_pressed"]
[connection signal="pressed" from="Del" to="." method="_on_Del_pressed"]
[connection signal="pressed" from="Numero1" to="." method="_on_Numero1_pressed"]
[connection signal="pressed" from="Numero4" to="." method="_on_Numero4_pressed"]
[connection signal="pressed" from="Numero7" to="." method="_on_Numero7_pressed"]
[connection signal="pressed" from="Close" to="." method="_on_Numero0_pressed"]
[connection signal="pressed" from="Close" to="." method="_on_Close_pressed"]
